<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:orderInCategory="2"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reelsFragment"
        android:icon="@drawable/ic_reels"
        android:orderInCategory="3"
        android:title="@string/reels"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_heart"
        android:orderInCategory="4"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/personalFragment"
        android:icon="@drawable/ic_person"
        android:orderInCategory="5"
        android:title="@string/personal"
        app:showAsAction="ifRoom" />
</menu>